--- a/OracleFormsReports/samples/docker-compose.yml
+++ b/OracleFormsReports/samples/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       - APPLICATION_BASE=${DC_APPLICATION_BASE}
       - APP_VZ=${DC_APP_VZ}
       - FORMS12C=${DC_FORMS12C}
+      - FADS12C=${DC_FADS12C}
       - REPORTS12C=${DC_REPORTS12C}
       - WEBTIER12C=${DC_WEBTIER12C}
       - OHS_COMPONENTNAME=${DC_OHS_COMPONENTNAME}
