--- a/OracleFormsReports/dockerfiles/12.2.1.3/Dockerfile_fads
+++ b/OracleFormsReports/dockerfiles/12.2.1.3/Dockerfile_fads
@@ -2,7 +2,7 @@
 #
 # ORACLE DOCKERFILES PROJECT
 # --------------------------
-# This is the Dockerfile for Oracle Forms & Reports 12.2.1.3.0 without FADS
+# This is the Dockerfile for Oracle Forms & Reports 12.2.1.3.0 with FADS
 #
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
@@ -21,6 +21,7 @@ MAINTAINER Dirk Nachbar <https://dirknachbar.blogspot.com>
 USER root
 ENV FMW_BIN=fmw_12.2.1.3.0_fr_linux64.bin
 ENV FMW_BIN2=fmw_12.2.1.3.0_fr_linux64-2.zip
+ENV SQLDEV=sqldeveloper-17.3.1.279.0537-x64.zip
 
 #
 # Copy files and packages for install
@@ -36,6 +37,10 @@ USER oracle
 COPY install/* /opt/
 RUN cd /opt && \
   ./$FMW_BIN -silent -responseFile /opt/formsreports.response -invPtrLoc /opt/oraInst.loc -jreLoc $JAVA_HOME -ignoreSysPrereqs -force -novalidation ORACLE_HOME=$ORACLE_HOME && \
+  cp $SQLDEV $ORACLE_HOME && \
+  cd $ORACLE_HOME && \
+  mv sqldeveloper sqldeveloper_old && \
+  $ORACLE_HOME/bin/unzip $SQLDEV && \
   rm -fr /opt/*.bin /opt/*.zip /opt/*.response /opt/*.loc
 
 VOLUME ["/opt/oracle/user_projects"]
